update more view

--- a/src/view/styles/main-style/style_index.scss
+++ b/src/view/styles/main-style/style_index.scss
@@ -18,6 +18,8 @@
 @import './loading-spin.scss';
 @import './side-panel.scss';
 @import './segmented.scss';
+@import './menu.scss';
+@import './main-tabss.scss';
 .anticon {
   vertical-align: 0;
 }
