--- a/src/view/Auth/styles.scss
+++ b/src/view/Auth/styles.scss
@@ -12,7 +12,7 @@ $primaryColor: #ff9138;
   justify-content: space-between;
   position: relative;
   height: 100vh;
-  background-image: url('../../shared/assets/images/login_img.png');
+  background-image: url('../../shared/assets/images/login_image.svg');
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center right 10%;
