--- a/src/view/styles/main-style/menu.scss
+++ b/src/view/styles/main-style/menu.scss
@@ -11,6 +11,8 @@
 .menu-item {
   text-decoration: none !important;
   display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
 a:hover {
@@ -25,28 +27,4 @@ a:hover {
 .ant-menu-submenu-title:hover {
   background-color: #fff2e7 !important;
   color: #ff9138 !important;
-}
-
-.ant-menu-submenu-popup .ant-menu-item:hover {
-  background-color: #fff2e7 !important;
-  color: #ff9138 !important;
-}
-.slide {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.menu-items {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-#logout {
-  margin-top: 200px;
-}
-
-.menu-item {
-  margin-bottom: 10px;
 }
